[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/spr_obstaculo_0.png" type="Texture" id=1]
[ext_resource path="res://escenas/enemy/Canon.gd" type="Script" id=2]
[ext_resource path="res://sprites/spr_obstaculo_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_obstaculo_2.png" type="Texture" id=4]
[ext_resource path="res://escenas/enemy/balaCanon.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5064, 9.57379 )

[node name="Canon" type="Area2D" groups=[
"enemy",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bala = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Cuadrado_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Canon_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
